# computer-vision-lab

Lab01/: CMakeLists.txt  densetest.cpp  densetest.py  main.cpp  point-plot.m  point-test.cpp  point-test.m  point-test.py  sparsetest.cpp  sparsetest.py  svd.py  videoshow.cpp  videoshow.py
Lab01/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  densetest  graphic.cpp  point  point-test  sparsetest  videoshow
Lab01/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
